<resources>
    <string name="app_name">trabalho_final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="choose_a_difficulty">Choose a difficulty</string>
    <string name="select">Select</string>
    <string name="start_game">Start Game</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="finish_game">Finish Game</string>
    <string name="next_question">Next Question</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="score">Score: %1$d</string>
    <string name="continue_string">Continue</string>
    <string name="player">Player</string>
    <string name="selected_category">Category: %1$s</string>
    <string name="selected_difficulty">Difficulty: %1$s</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="ranking" translatable="false">Ranking</string>
    <string name="logout">Logout</string>
    <string name="cant_be_blank">%1$s can\'t be blank</string>
    <string name="has_already_been_taken">%1$s has already been taken</string>
    <string name="is_invalid">%1$s is invalid</string>
    <string name="dont_match">%1$s and %2$s don\'t match</string>
    <string name="is_too_short">%1$s is too short</string>
    <string name="invalid_email_or_password">Invalid Email or Password</string>
    <string name="started_at">Started at %1$s</string>
    <string name="finished_at">Finished at %1$s</string>
    <string name="incorrect_answer">Incorrect Answer</string>
</resources>